create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1864,7 +1864,7 @@ body {
 .cid-rR01H2SzMa {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/background6.jpg");
 }
 .cid-rR01H2SzMa .mbr-section-subtitle {
   color: #767676;
