--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -142,7 +142,7 @@ body {
   background-color: #82786e !important;
 }
 .bg-warning {
-  background-color: #879a9f !important;
+  background-color: #ffffff !important;
 }
 .bg-danger {
   background-color: #b1a374 !important;
@@ -229,23 +229,23 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
-  color: #ffffff !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
-  color: #ffffff !important;
-  background-color: #617479 !important;
-  border-color: #617479 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-danger,
 .btn-danger:active {
@@ -393,22 +393,22 @@ body {
 .btn-warning-outline,
 .btn-warning-outline:active {
   background: none;
-  border-color: #55666b;
-  color: #55666b;
+  border-color: #cccccc;
+  color: #cccccc;
 }
 .btn-warning-outline:hover,
 .btn-warning-outline:focus,
 .btn-warning-outline.focus,
 .btn-warning-outline.active {
-  color: #ffffff;
-  background-color: #879a9f;
-  border-color: #879a9f;
+  color: #808080;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-warning-outline.disabled,
 .btn-warning-outline:disabled {
-  color: #ffffff !important;
-  background-color: #879a9f !important;
-  border-color: #879a9f !important;
+  color: #808080 !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-danger-outline,
 .btn-danger-outline:active {
@@ -477,7 +477,7 @@ body {
   color: #82786e !important;
 }
 .text-warning {
-  color: #879a9f !important;
+  color: #ffffff !important;
 }
 .text-danger {
   color: #b1a374 !important;
@@ -506,7 +506,7 @@ a.text-info:focus {
 }
 a.text-warning:hover,
 a.text-warning:focus {
-  color: #55666b !important;
+  color: #cccccc !important;
 }
 a.text-danger:hover,
 a.text-danger:focus {
@@ -527,7 +527,7 @@ a.text-black:focus {
   background-color: #82786e;
 }
 .alert-warning {
-  background-color: #879a9f;
+  background-color: #ffffff;
 }
 .alert-danger {
   background-color: #b1a374;
@@ -582,7 +582,7 @@ a:hover {
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
-  color: #ced6d8;
+  color: #ffffff;
 }
 .mbr-plan-header.bg-danger .mbr-plan-subtitle,
 .mbr-plan-header.bg-danger .mbr-plan-price-desc {
@@ -2117,7 +2117,7 @@ body {
 .cid-rR0F9yF1vZ {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #ffffff;
+  background-color: #000000;
 }
 .cid-rR0kPYp0pP {
   padding-top: 90px;
@@ -2191,104 +2191,57 @@ body {
     padding-left: 30px;
   }
 }
-.cid-rR0kUigJ8P {
-  padding-top: 90px;
-  padding-bottom: 90px;
+.cid-rR0MFivA97 {
+  padding-top: 15px;
+  padding-bottom: 0px;
   background-color: #000000;
 }
-.cid-rR0kUigJ8P .socicon-bg-facebook {
-  background: #3e5b98;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-twitter {
-  background: #4da7de;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-googleplus {
-  background: #dd4b39;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-vkontakte {
-  background: #5a7fa6;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-odnoklassniki {
-  background: #f48420;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-pinterest {
-  background: #c92619;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .socicon-bg-mail {
-  background: #134785;
-  color: #ffffff;
-}
-.cid-rR0kUigJ8P .btn-social {
-  border: none !important;
-}
-.cid-rR0kUigJ8P [class^="socicon-"]:before,
-.cid-rR0kUigJ8P [class*=" socicon-"]:before {
-  line-height: 44px;
-}
-@media (max-width: 767px) {
-  .cid-rR0kUigJ8P .btn {
-    font-size: 20px !important;
-  }
-}
-.cid-rR0kUigJ8P .mbr-section-title {
-  color: #ffffff;
-}
-.cid-rR0l205Wgg {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rR0l205Wgg .form-text {
+.cid-rR0MFivA97 P {
   color: #767676;
 }
-@media (max-width: 767px) {
-  .cid-rR0l205Wgg .content {
-    text-align: center;
-  }
-  .cid-rR0l205Wgg .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
+.cid-rR0MFivA97 H1 {
+  color: #ffffff;
 }
-.cid-rR0l205Wgg .img-logo img {
-  height: 6rem;
+.cid-rR0MeZv59n {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #000000;
 }
-.cid-rR0l205Wgg .form-group,
-.cid-rR0l205Wgg .input-group-btn {
+.cid-rR0MeZv59n .row-links {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rR0MeZv59n .social-row {
+  width: 100%;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.cid-rR0MeZv59n .media-container-row {
+  -webkit-flex-direction: column;
+  flex-direction: column;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rR0MeZv59n .media-container-row .foot-menu {
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
   padding: 0;
+  margin-bottom: 0;
 }
-.cid-rR0l205Wgg .form-control {
-  font-size: .75rem;
-  text-align: center;
-  min-width: 150px;
+.cid-rR0MeZv59n .media-container-row .foot-menu li {
+  padding: 0 1rem 1rem 1rem;
 }
-.cid-rR0l205Wgg .input-group-btn .btn {
-  padding: .75rem 1.5625rem !important;
-  margin-left: .625rem;
-  text-transform: none;
-  color: #fff;
-  text-align: center;
+.cid-rR0MeZv59n .media-container-row .foot-menu li p {
+  margin: 0;
 }
-.cid-rR0l205Wgg .copyright .mbr-text {
-  color: #767676;
-}
-@media (max-width: 767px) {
-  .cid-rR0l205Wgg .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-rR0l205Wgg .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #000;
-  opacity: .05;
-}
-.cid-rR0l205Wgg .footer-lower .social-list {
+.cid-rR0MeZv59n .media-container-row .social-list {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
@@ -2298,39 +2251,32 @@ body {
   -webkit-justify-content: flex-end;
   justify-content: flex-end;
 }
-.cid-rR0l205Wgg .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #232323;
+.cid-rR0MeZv59n .media-container-row .social-list .mbr-iconfont-social {
+  font-size: 1.5rem;
+  color: #ffffff;
 }
-.cid-rR0l205Wgg .footer-lower .social-list .soc-item {
+.cid-rR0MeZv59n .media-container-row .social-list .soc-item {
   margin: 0 .5rem;
 }
-.cid-rR0l205Wgg .footer-lower .social-list a {
+.cid-rR0MeZv59n .media-container-row .social-list a {
   margin: 0;
   opacity: .5;
   -webkit-transition: .2s linear;
   transition: .2s linear;
 }
-.cid-rR0l205Wgg .footer-lower .social-list a:hover {
+.cid-rR0MeZv59n .media-container-row .social-list a:hover {
   opacity: 1;
 }
 @media (max-width: 767px) {
-  .cid-rR0l205Wgg .footer-lower .social-list {
+  .cid-rR0MeZv59n .media-container-row .social-list {
     -webkit-justify-content: center;
     justify-content: center;
   }
 }
-@media (max-width: 767px) {
-  .cid-rR0l205Wgg .foot-logo {
-    text-align: center !important;
-  }
-  .cid-rR0l205Wgg .foot-title {
-    text-align: center !important;
-  }
-  .cid-rR0l205Wgg .mbr-text {
-    text-align: center !important;
-  }
-  .cid-rR0l205Wgg .form-group {
-    margin: 0;
-  }
+.cid-rR0MeZv59n .media-container-row .row-copirayt {
+  word-break: break-word;
+  width: 100%;
+}
+.cid-rR0MeZv59n .media-container-row .row-copirayt p {
+  width: 100%;
 }
