--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -35,7 +35,7 @@ body {
   font-size: 4.8rem;
 }
 .display-4 {
-  font-family: 'Rubik', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1rem;
 }
 .display-4 > .mbr-iconfont {
@@ -1839,8 +1839,8 @@ body {
   color: #149dcc;
 }
 .cid-rR01tfaq3D {
-  padding-top: 15px;
-  padding-bottom: 15px;
+  padding-top: 45px;
+  padding-bottom: 45px;
   background-color: #000000;
 }
 .cid-rR01tfaq3D .line {
@@ -2114,6 +2114,11 @@ body {
     padding-bottom: 1.5rem;
   }
 }
+.cid-rSelCLTxQx {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
 .cid-rR0kPYp0pP {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2148,7 +2153,7 @@ body {
   border-radius: 3px;
 }
 .cid-rR0kPYp0pP .google-map {
-  height: 20rem;
+  height: 21rem;
   position: relative;
 }
 .cid-rR0kPYp0pP .google-map iframe {
@@ -2187,7 +2192,7 @@ body {
   }
 }
 .cid-rR0MFivA97 {
-  padding-top: 15px;
+  padding-top: 30px;
   padding-bottom: 0px;
   background-color: #000000;
 }
@@ -2789,4 +2794,26 @@ body {
 }
 .cid-rR1dqJ1Idv .mbr-author-desc {
   color: #000000;
+}
+.cid-rSelVU1eLI {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rSelVU1eLI P {
+  color: #767676;
+}
+.cid-rSelVU1eLI H1 {
+  color: #ffffff;
+}
+.cid-rSqimGuNG4 {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #000000;
+}
+.cid-rSqimGuNG4 P {
+  color: #767676;
+}
+.cid-rSqimGuNG4 H1 {
+  color: #ffffff;
 }
