create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1837,7 +1837,7 @@ body {
 }
 .cid-rTy9Dcoib4 .card-img {
   text-align: left;
-  background-color: #000000;
+  background-color: #c1c1c1;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   padding: 3rem 2.5rem 0 2.5rem;
@@ -1848,7 +1848,7 @@ body {
 }
 .cid-rTy9Dcoib4 .card-box {
   padding: 0rem 2.5rem 3rem 2.5rem;
-  background-color: #000000;
+  background-color: #c1c1c1;
 }
 .cid-rTy9Dcoib4 .card-title,
 .cid-rTy9Dcoib4 .card-img {
