--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1837,7 +1837,7 @@ body {
 }
 .cid-rTy9Dcoib4 .card-img {
   text-align: left;
-  background-color: #c1c1c1;
+  background-color: #cccccc;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
   padding: 3rem 2.5rem 0 2.5rem;
@@ -1848,16 +1848,16 @@ body {
 }
 .cid-rTy9Dcoib4 .card-box {
   padding: 0rem 2.5rem 3rem 2.5rem;
-  background-color: #c1c1c1;
+  background-color: #cccccc;
 }
 .cid-rTy9Dcoib4 .card-title,
 .cid-rTy9Dcoib4 .card-img {
   text-align: center;
-  color: #ffffff;
+  color: #000000;
 }
 .cid-rTy9Dcoib4 P {
   text-align: center;
-  color: #ffffff;
+  color: #000000;
 }
 .cid-rR0kX2ROZp {
   padding-top: 45px;
