--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2138,79 +2138,28 @@ body {
 .cid-rSelCLTxQx {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #ffffff;
+  background-color: #cccccc;
 }
-.cid-rR0kPYp0pP {
+.cid-rTDtSkNIXr {
   padding-top: 90px;
   padding-bottom: 90px;
   background-color: #ffffff;
 }
-.cid-rR0kPYp0pP .mbr-iconfont {
-  font-size: 48px;
-  padding-right: 1rem;
+.cid-rTDtSkNIXr .title {
+  margin-bottom: 2rem;
 }
-.cid-rR0kPYp0pP .icon-block {
-  margin-bottom: 10px;
+.cid-rTDtSkNIXr .mbr-section-subtitle {
+  color: #000000;
 }
-.cid-rR0kPYp0pP .icon-block .icon-block__icon {
-  display: inline-block;
-  vertical-align: middle;
-}
-.cid-rR0kPYp0pP .icon-block .icon-block__title {
-  display: inline-block;
-  vertical-align: middle;
-  margin-bottom: 0;
-  line-height: 1;
-  font-style: italic;
-}
-.cid-rR0kPYp0pP .mbr-text {
-  color: #767676;
-}
-.cid-rR0kPYp0pP textarea.form-control {
-  min-height: 100px;
-}
-.cid-rR0kPYp0pP a:not([href]):not([tabindex]) {
+.cid-rTDtSkNIXr a:not([href]):not([tabindex]) {
   color: #fff;
   border-radius: 3px;
 }
-.cid-rR0kPYp0pP .google-map {
-  height: 15rem;
-  position: relative;
+.cid-rTDtSkNIXr a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
 }
-.cid-rR0kPYp0pP .google-map iframe {
-  height: 100%;
-  width: 100%;
-}
-.cid-rR0kPYp0pP .google-map [data-state-details] {
-  color: #6b6763;
-  font-family: Montserrat;
-  height: 1.5em;
-  margin-top: -0.75em;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.cid-rR0kPYp0pP .google-map[data-state] {
-  background: #e9e5dc;
-}
-.cid-rR0kPYp0pP .google-map[data-state="loading"] [data-state-details] {
-  display: none;
-}
-@media (max-width: 767px) {
-  .cid-rR0kPYp0pP h2 {
-    padding-top: 2rem;
-  }
-}
-@media (min-width: 768px) {
-  .cid-rR0kPYp0pP .container > .row > .col-md-6:first-child {
-    padding-right: 30px;
-  }
-  .cid-rR0kPYp0pP .container > .row > .col-md-6:last-child {
-    padding-left: 30px;
-  }
+.cid-rTDtSkNIXr textarea.form-control {
+  min-height: 188px;
 }
 .cid-rR0MFivA97 {
   padding-top: 30px;
