create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2145,6 +2145,9 @@ body {
     padding-bottom: 1.5rem;
   }
 }
+.cid-rVrmODkvET {
+  background-image: url("../../../assets/images/8-6-18-cg-group-shirts-fb-1200x630.png");
+}
 .cid-rSelCLTxQx {
   padding-top: 45px;
   padding-bottom: 45px;
@@ -2732,19 +2735,13 @@ body {
 .cid-rR0MeZv59n .media-container-row .row-copirayt p {
   width: 100%;
 }
-.cid-rR1arPsgUH {
-  padding-top: 120px;
-  padding-bottom: 120px;
-  background-color: #efefef;
-}
-.cid-rR1arPsgUH .mbr-section-subtitle {
-  color: #000000;
-}
-.cid-rR1arPsgUH H2 {
-  color: #000000;
+.cid-rVrkUmb5qq {
+  padding-top: 135px;
+  padding-bottom: 135px;
+  background-image: url("../../../assets/images/keagan-henman-won79-9ouek-unsplash-1-2000x1334.jpeg");
 }
 .cid-rR1dqJ1Idv {
-  padding-top: 15px;
+  padding-top: 0px;
   padding-bottom: 0px;
   background-color: #ffffff;
 }
@@ -3192,7 +3189,7 @@ body {
   color: #767676 !important;
 }
 .cid-rSCahGNnCC {
-  background-image: url("../../../assets/images/custom-basketball-apparel-1024x768.jpg");
+  background-image: url("../../../assets/images/family-reunion-shirts-3-1803x966.jpg");
 }
 .cid-rSCbfBKKJd {
   padding-top: 30px;
