create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -28,11 +28,11 @@ body {
   font-size: 6.8rem;
 }
 .display-2 {
-  font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-family: 'Lato', sans-serif;
+  font-size: 3.2rem;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 5.12rem;
 }
 .display-4 {
   font-family: 'Lato', sans-serif;
@@ -67,9 +67,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.56rem;
+    font-size: calc( 1.77rem + (3.2 - 1.77) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.77rem + (3.2 - 1.77) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -1825,8 +1825,8 @@ body {
   color: #767676;
 }
 .cid-rTy9Dcoib4 {
-  padding-top: 45px;
-  padding-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rTy9Dcoib4 h4 {
@@ -2743,8 +2743,16 @@ body {
 }
 .cid-rVrkUmb5qq {
   padding-top: 135px;
-  padding-bottom: 135px;
-  background-image: url("../../../assets/images/keagan-henman-won79-9ouek-unsplash-1-2000x1334.jpeg");
+  padding-bottom: 75px;
+  background-image: url("../../../assets/images/keagan-henman-won79-9ouek-unsplash-2000x1334.jpg");
+}
+.cid-rVwJ9lOv9l {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rVwJ9lOv9l P {
+  color: #767676;
 }
 .cid-rR1dqJ1Idv {
   padding-top: 0px;
