--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2863,8 +2863,8 @@ body {
 .cid-rR0kX2ROZp {
   padding-top: 45px;
   padding-bottom: 45px;
-  background-color: #55b4d4;
-  background: linear-gradient(#55b4d4, #ffffff);
+  background-color: #149dcc;
+  background: linear-gradient(#149dcc, #ffffff);
 }
 .cid-rR0kX2ROZp .carousel-control {
   background: #000;
